Version 1.2 - 20260728